build: npm publish

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vue-hotspots",
   "version": "0.1.0",
-  "private": true,
+  "main":"dist/vue-hotspots.umd.min.js",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name vue-hotspots ./src/index.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
